@@ -44,8 +44,7 @@ public class PaymentRequestHelper {
     @Transactional
     public void persistPayment(PaymentRequest paymentRequest) {
         if (publishIfOutboxMessageProcessedForPayment(paymentRequest, PaymentStatus.Completed)) {
-            log.info("An outbox message with saga id: [{}] is already saved to database!",
-                    paymentRequest.getSagaId());
+            log.info("An outbox message with saga id: [{}] is already saved to database!", paymentRequest.getSagaId());
             return;
         }
 
@@ -69,8 +68,7 @@ public class PaymentRequestHelper {
     @Transactional
     public void persistCancelPayment(PaymentRequest paymentRequest) {
         if (publishIfOutboxMessageProcessedForPayment(paymentRequest, PaymentStatus.Cancelled)) {
-            log.info("An outbox message with saga id: [{}] is already saved to database!",
-                    paymentRequest.getSagaId());
+            log.info("An outbox message with saga id: [{}] is already saved to database!", paymentRequest.getSagaId());
             return;
         }
 
@@ -100,7 +98,7 @@ public class PaymentRequestHelper {
     private CreditEntry getCreditEntry(CustomerId customerId) {
         Optional<CreditEntry> creditEntry = creditEntryRepository.findByCustomerId(customerId);
         if (creditEntry.isEmpty()) {
-            log.error("Could not find credit entry for customer: {}", customerId.getValue());
+            log.error("Could not find credit entry for customer: [{}]", customerId.getValue());
             throw new PaymentApplicationServiceException("Could not find credit entry for customer: " +
                     customerId.getValue());
         }
@@ -110,7 +108,7 @@ public class PaymentRequestHelper {
     private List<CreditHistory> getCreditHistory(CustomerId customerId) {
         Optional<List<CreditHistory>> creditHistories = creditHistoryRepository.findByCustomerId(customerId);
         if (creditHistories.isEmpty()) {
-            log.error("Could not find credit history for customer: {}", customerId.getValue());
+            log.error("Could not find credit history for customer: [{}]", customerId.getValue());
             throw new PaymentApplicationServiceException("Could not find credit history for customer: " +
                     customerId.getValue());
         }
@@ -124,16 +122,15 @@ public class PaymentRequestHelper {
         paymentRepository.save(payment);
         if (failureMessages.isEmpty()) {
             creditEntryRepository.save(creditEntry);
-            creditHistoryRepository.save(creditHistories.get(creditHistories.size() - 1));
+            creditHistoryRepository.save(creditHistories.getLast());
         }
     }
 
     private boolean publishIfOutboxMessageProcessedForPayment(PaymentRequest paymentRequest,
                                                               PaymentStatus paymentStatus) {
         Optional<OrderOutboxMessage> orderOutboxMessage =
-                orderOutboxHelper.getCompletedOrderOutboxMessageBySagaIdAndPaymentStatus(
-                        paymentRequest.getSagaId(),
-                        paymentStatus);
+                orderOutboxHelper.getCompletedOrderOutboxMessageBySagaIdAndPaymentStatus(paymentRequest.getSagaId(), paymentStatus);
+
         if (orderOutboxMessage.isPresent()) {
             paymentResponseMessagePublisher.publish(orderOutboxMessage.get(), orderOutboxHelper::updateOutboxMessage);
             return true;
